changing back to group list

--- a/wrn-angular/app/styles/main.less
+++ b/wrn-angular/app/styles/main.less
@@ -22,7 +22,7 @@
 @brand-info: #FFFF66;
 /* hot pink */
 @brand-warning: #D11565;
-@brand-danger: @gray-darker;
+@brand-danger: @gray;
 
 @link-color: @gray;
 
@@ -66,14 +66,14 @@ body {
 
 /* progress bar */
 .main .progress {
-  height: 60px;
-  line-height:60px;
+  height: 100px;
+  line-height:100px;
 
   .progress-bar {
     display: inline-block;
     vertical-align: middle;
     line-height: normal;  
     text-align: left; 
-    padding: 10px   
+    padding: 15px;
   }
 }
