--- a/wrn-angular/app/views/main.html
+++ b/wrn-angular/app/views/main.html
@@ -26,20 +26,20 @@
 
 <div class="main" ng-repeat="day in main.days | orderBy:'date':true">
 
-<div class="col-sm-6 col-md-4">
+<div >
   <div ng-show="day.entry">
 
     <div ng-show="day.entry.locked">
       
         <div class="progress">
           <div class="progress-bar 
-          ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 'progress-bar-danger'" 
+          ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 'progress-bar-warning'" 
           role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" 
           style="width: {{ day.entry.word_count >= day.entry.goal ? 100 : day.entry.word_count/day.entry.goal*100 }}%">
-          <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} 
+          <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} 
         <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
-        </h4>
-          <span>{{ day.entry.word_count }} / {{ day.entry.goal }}</span> words
+        </h3>
+          <h4>{{ day.entry.word_count }} / {{ day.entry.goal }} words</h4> 
           <p class="text-muted">
           {{day.entry.preview}}
         </p>
@@ -53,11 +53,11 @@
       <div class="progress">      
         <div class="progress-bar 
                   ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 
-                  $index == 0 ? 'progress-bar-info' : 'progress-bar-danger'" 
+                  $index == 0 ? 'progress-bar-info' : 'progress-bar-warning'" 
         role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" 
         style="width: {{ day.entry.word_count >= day.entry.goal ? 100 : day.entry.word_count/day.entry.goal*100 }}%">
-        <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h4>
-        <span>{{ day.entry.word_count }} / {{ day.entry.goal }}</span> words
+        <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h3>
+        <h4>{{ day.entry.word_count }} / {{ day.entry.goal }} words</h4>
               <p class="text-muted">
         {{day.entry.preview}}
       </p>
@@ -72,7 +72,8 @@
     <div class="progress">
       <div class="progress-bar progress-bar-danger" 
           role="progressbar" style="width: 100%">
-          <h4 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} <small>You skipped :(</small></h4>
+          <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h3>
+           <h4>You skipped :(</h4>
       </div>
     </div>
    
