--- a/wrn-angular/app/styles/main.less
+++ b/wrn-angular/app/styles/main.less
@@ -65,15 +65,11 @@ body {
 }
 
 /* progress bar */
-.main .progress {
-  height: 100px;
-  line-height:100px;
-
+.list-group .progress {
+  height: 40px;  
   .progress-bar {
-    display: inline-block;
-    vertical-align: middle;
-    line-height: normal;  
-    text-align: left; 
-    padding: 15px;
+    padding-top:10px; 
+    display:inline-block;
+    font-size: 20px;      
   }
 }
