--- a/wrn-angular/app/views/main.html
+++ b/wrn-angular/app/views/main.html
@@ -24,59 +24,45 @@
   </div> -->
 
 
-<div class="main" ng-repeat="day in main.days | orderBy:'date':true">
+<div class="list-group" ng-repeat="day in main.days | orderBy:'date':true">
 
-<div >
   <div ng-show="day.entry">
 
-    <div ng-show="day.entry.locked">
-      
+    <div class="list-group-item" ng-show="day.entry.locked">
+        <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+        </h3>
         <div class="progress">
           <div class="progress-bar 
-          ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 'progress-bar-warning'" 
+          ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 'progress-bar-danger'" 
           role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" 
           style="width: {{ day.entry.word_count >= day.entry.goal ? 100 : day.entry.word_count/day.entry.goal*100 }}%">
-          <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} 
-        <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
-        </h3>
-          <h4>{{ day.entry.word_count }} / {{ day.entry.goal }} words</h4> 
-          <p class="text-muted">
-          {{day.entry.preview}}
-        </p>
+          <span>{{ day.entry.word_count }} / {{ day.entry.goal }}</span> words
           </div>
-        </div>
-        
+        </div><!-- progress -->
+
+        <p class="text-muted">{{day.entry.preview}}</p>
     </div>
 
-    <a ng-hide="day.entry.locked" ng-href="#/entries/{{ day.entry.id }}">
-      
+    <a class="list-group-item" ng-hide="day.entry.locked" ng-href="#/entries/{{ day.entry.id }}">
+              <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h3>
+
       <div class="progress">      
         <div class="progress-bar 
                   ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 
-                  $index == 0 ? 'progress-bar-info' : 'progress-bar-warning'" 
+                  $index == 0 ? 'progress-bar-info' : 'progress-bar-danger'" 
         role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" 
         style="width: {{ day.entry.word_count >= day.entry.goal ? 100 : day.entry.word_count/day.entry.goal*100 }}%">
-        <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h3>
-        <h4>{{ day.entry.word_count }} / {{ day.entry.goal }} words</h4>
-              <p class="text-muted">
-        {{day.entry.preview}}
-      </p>
+          <span>{{ day.entry.word_count }} / {{ day.entry.goal }}</span> words
         </div>
-      </div>
-
-    </a>
-    
+      </div><!-- progress -->
+      <p class="text-muted">{{day.entry.preview}}</p>
+    </a>    
   </div><!-- ng-show -->
 
   <div ng-hide="day.entry">
-    <div class="progress">
-      <div class="progress-bar progress-bar-danger" 
-          role="progressbar" style="width: 100%">
-          <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h3>
-           <h4>You skipped :(</h4>
-      </div>
+    <div  class="list-group-item">
+      <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} <small>You skipped :(</small></h3>
     </div>
-   
   </div><!-- ng-hide -->
 
 
