--- a/wrn-angular/app/views/main.html
+++ b/wrn-angular/app/views/main.html
@@ -28,40 +28,45 @@
 
   <div ng-show="day.entry">
 
-    <div class="list-group-item" ng-show="day.entry.locked">
-        <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
-        </h3>
-        <div class="progress">
-          <div class="progress-bar 
-          ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 'progress-bar-danger'" 
-          role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" 
-          style="width: {{ day.entry.word_count >= day.entry.goal ? 100 : day.entry.word_count/day.entry.goal*100 }}%">
-          <span>{{ day.entry.word_count }} / {{ day.entry.goal }}</span> words
-          </div>
-        </div><!-- progress -->
-
-        <p class="text-muted">{{day.entry.preview}}</p>
-    </div>
-
     <a class="list-group-item" ng-hide="day.entry.locked" ng-href="#/entries/{{ day.entry.id }}">
-              <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h3>
-
+      <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h3>
+      <h3>{{day.entry.progress}}%</h3>
       <div class="progress">      
         <div class="progress-bar 
-                  ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 
-                  $index == 0 ? 'progress-bar-info' : 'progress-bar-danger'" 
+        ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 'progress-bar-info'" 
         role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" 
-        style="width: {{ day.entry.word_count >= day.entry.goal ? 100 : day.entry.word_count/day.entry.goal*100 }}%">
-          <span>{{ day.entry.word_count }} / {{ day.entry.goal }}</span> words
+        style="width: {{ day.entry.progress > 100 ? 100 : day.entry.progress }}%">
         </div>
       </div><!-- progress -->
+      <span>{{ day.entry.word_count }} / {{ day.entry.goal }}</span> words
       <p class="text-muted">{{day.entry.preview}}</p>
-    </a>    
+    </a>
+
+    <div class="list-group-item" ng-show="day.entry.locked">
+      <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} <span class="glyphicon glyphicon-lock" aria-hidden="true"></span></h3>
+      <h3>{{day.entry.progress}}%</h3>
+      <div class="progress">
+        <div class="progress-bar 
+        ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 'progress-bar-danger'" 
+        role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" 
+        style="width: {{ day.entry.progress > 100 ? 100 : day.entry.word_count/day.entry.goal*100 }}%"></div>
+      </div><!-- progress -->
+      <span>{{ day.entry.word_count }} / {{ day.entry.goal }}</span> words
+      <p class="text-muted">{{day.entry.preview}}</p>
+    </div>
+    
   </div><!-- ng-show -->
 
   <div ng-hide="day.entry">
     <div  class="list-group-item">
       <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} <small>You skipped :(</small></h3>
+      <h3>0%</h3>
+      <div class="progress">      
+        <div class="progress-bar"  
+        role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" 
+        style="width: 0%">
+        </div>
+      </div><!-- progress -->
     </div>
   </div><!-- ng-hide -->
 
