--- a/wrn-angular/app/views/main.html
+++ b/wrn-angular/app/views/main.html
@@ -24,12 +24,12 @@
   </div> -->
 
 
-<div class="list-group" ng-repeat="day in main.days | orderBy:'date':true">
+<div class="main list-group" ng-repeat="day in main.days | orderBy:'date':true">
 
   <div ng-show="day.entry">
 
     <a class="list-group-item" ng-hide="day.entry.locked" ng-href="#/entries/{{ day.entry.id }}">
-      <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }}</h3>
+      <h3>{{ day.date | date:"MMM d, y" }}</h3>
       <h3>{{day.entry.progress}}%</h3>
       <div class="progress">      
         <div class="progress-bar 
@@ -43,11 +43,11 @@
     </a>
 
     <div class="list-group-item" ng-show="day.entry.locked">
-      <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} <span class="glyphicon glyphicon-lock" aria-hidden="true"></span></h3>
+      <h3>{{ day.date | date:"MMM d, y" }} <span class="glyphicon glyphicon-lock" aria-hidden="true"></span></h3>
       <h3>{{day.entry.progress}}%</h3>
       <div class="progress">
         <div class="progress-bar 
-        ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 'progress-bar-danger'" 
+        ng-class: day.entry.word_count/day.entry.goal >= 1 ? 'progress-bar-success' : 'progress-bar-info'" 
         role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" 
         style="width: {{ day.entry.progress > 100 ? 100 : day.entry.word_count/day.entry.goal*100 }}%"></div>
       </div><!-- progress -->
@@ -58,8 +58,8 @@
   </div><!-- ng-show -->
 
   <div ng-hide="day.entry">
-    <div  class="list-group-item">
-      <h3 class="list-group-item-heading">{{ day.date | date:"MMM d, y" }} <small>You skipped :(</small></h3>
+    <div class="list-group-item">
+      <h3>{{ day.date | date:"MMM d, y" }}</h3>
       <h3>0%</h3>
       <div class="progress">      
         <div class="progress-bar"  
@@ -67,6 +67,7 @@
         style="width: 0%">
         </div>
       </div><!-- progress -->
+      <p class="text-muted">You skipped :(</p>
     </div>
   </div><!-- ng-hide -->
 
