--- a/wrn-angular/app/views/stats.html
+++ b/wrn-angular/app/views/stats.html
@@ -5,9 +5,9 @@
     </div>
       <div class="col-md-4 col-xs-4">
         <ul class="list-group">
-          <li class="list-group-item"><h2><small>Progress</small> {{stats.dt.today.progress}}%</h2></li>
-          <li class="list-group-item"><h2><small>Words Written</small> {{stats.dt.today.data[0]}}</h2></li>
-          <li class="list-group-item"><h2><small>Words to Goal</small> {{stats.dt.today.data[1]}}</h2></li>
+          <li class="list-group-item"><h3><small>Progress</small></h3><h3>{{stats.dt.today.progress}}%</h3></li>
+          <li class="list-group-item"><h3><small>Words Written</small></h3><h3>{{stats.dt.today.data[0]}}</h3></li>
+          <li class="list-group-item"><h3><small>Words to Goal</small></h3><h3>{{stats.dt.today.data[1]}}</h3></li>
         </ul>
       </div>
       <div class="col-md-6 col-xs-6">
@@ -26,9 +26,9 @@
     </div>
     <div class="col-md-4 col-xs-4">
       <ul class="list-group">
-        <li class="list-group-item"><h2><small>Longest Streak </small>{{stats.dt.completion.streak}} Days</h2></li>
-        <li class="list-group-item"><h2><small>Total Written </small>{{stats.dt.words.totalWords}} Words</h2></li>
-        <li class="list-group-item"><h2><small>Daily Average </small>{{stats.dt.words.dailyAvg}} Words</h2></li>
+        <li class="list-group-item"><h3><small>Longest Streak</small></h3><h3>{{stats.dt.completion.streak}} Days</h3></li>
+        <li class="list-group-item"><h3><small>Total Written</small></h3><h3>{{stats.dt.words.totalWords}} Words</h3></li>
+        <li class="list-group-item"><h3><small>Daily Average</small></h3><h3>{{stats.dt.words.dailyAvg}} Words</h3></li>
       </ul>
     </div>
      <div class="col-md-6 col-xs-6">
