--- a/wrn-angular/app/styles/main.less
+++ b/wrn-angular/app/styles/main.less
@@ -1,6 +1,7 @@
 @import "../../bower_components/bootstrap/less/bootstrap.less";
 
-@import url(http://fonts.googleapis.com/css?family=Bevan|Monofett);
+@import url(http://fonts.googleapis.com/css?family=Monofett);
+/*Bevan|Rock+Salt*/
 
 @font-face {
   font-family: 'Glyphicons Halflings';
@@ -8,7 +9,28 @@
   src: url('./fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('./fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('./fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 
-/*
+/*Typography
+## Font, line-height, and color for body text, headings, and more.
+*/
+@font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-serif:       Garamond, Georgia, "Times New Roman", Times, serif;
+@font-family-base:        @font-family-sans-serif;
+
+/** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
+@font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
+
+@font-size-base:          14px;
+@font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
+@font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
+
+@font-size-h1:            floor((@font-size-base * 2.6)); // ~36px
+@font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
+@font-size-h3:            ceil((@font-size-base * 1.7)); // ~24px
+@font-size-h4:            ceil((@font-size-base * 1.25)); // ~18px
+@font-size-h5:            @font-size-base;
+@font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
+
+/* Colours
 @gray-base:              #000;
 @gray-darker:            lighten(@gray-base, 13.5%); // #222
 @gray-dark:              lighten(@gray-base, 20%);   // #333
@@ -22,6 +44,7 @@
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 */
+
 
 /* robin's egg blue */
 @main-color: #00CCCC;
@@ -49,7 +72,7 @@ body {
 .ql-editor {
   padding: 0 3em;
   font-size: 2em;
-  font-family: Garamond;
+  font-family: @font-family-serif;
 }
 
 /* hide nav bar */
@@ -69,8 +92,8 @@ body {
   text-shadow: 3px 2px 0 @main-color,5px 4px 0 @gray;
 */
   font-family: Monofett; 
-  color: black !important; 
-  font-size: 32px
+  color: @gray-darker !important; 
+  font-size: 36px
 }
 
 /* progress bar & list -group */
@@ -85,22 +108,25 @@ body {
     border: none;
   }
 
+}
+
+.list-group .list-group-item{
+  
+  overflow: auto;
+  clear:both; 
+
   h3{
     display: inline-block;    
-    outline: solid red;
   }
+  /* Date */
   h3:nth-child(1){
     float: left;
   }
+  /* Percentage */
   h3:nth-child(2){
-   float: right;
+    float: right;
   }
 
-/*  .progress-bar {
-    padding-top:10px; 
-    display:inline-block;
-    font-size: 20px;      
-  }*/
 }
 
 
