--- a/wrn-angular/app/views/entry.html
+++ b/wrn-angular/app/views/entry.html
@@ -27,7 +27,7 @@
 <footer class="navbar navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="progress navbar-text"  style="width: 5em">
-      <div class="progress-bar ng-class: entry.progress >= 100 ? 'progress-bar-success' : 'progress-bar-info'" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: {{ entry.progress > 100 ? 100 : entry.progress }}%"><span>{{ entry.progress }}%</span> 
+      <div class="progress-bar ng-class: entry.currentEntry.progress >= 100 ? 'progress-bar-success' : 'progress-bar-info'" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: {{ entry.currentEntry.progress > 100 ? 100 : entry.currentEntry.progress }}%"><span>{{ entry.currentEntry.progress }}%</span> 
       </div>
     </div>
    
