--- a/wrn-angular/app/views/main.html
+++ b/wrn-angular/app/views/main.html
@@ -1,20 +1,18 @@
 <div class="container">
 
-<!-- TODO: Update User Goal -->
+<!-- Update User Goal -->
 <div ng-controller="UserCtrl as user">
   <div class="page-header"><h1>{{ $root.currentUser.name }}'s Entries</h1>
   
-  <p>Daily goal: {{ $root.currentUser.goal }} words
-  <span class="input-btn">
-    <button class="btn" aria-pressed="false" autocomplete="off" aria-label="Edit"
-    data-toggle="collapse" data-target="#goalInput" aria-expanded="false" aria-controls="goalInput">Change Goal</button>
-  </span>
-  </p>
+  <h2><small>Daily goal: {{ $root.currentUser.goal }} words
+    <span class="glyphicon glyphicon-edit" aria-hidden="true" aria-pressed="false" autocomplete="off" aria-label="Edit"
+    data-toggle="collapse" data-target="#goalInput" aria-expanded="false" aria-controls="goalInput"></span>
+  </small></h2>
 
   <div class="collapse" id="goalInput">
-    <div class="well">
+    <div class="well well-sm">
       <form name="goal" class="form-inline" ng-model-options="{ updateOn: 'blur' }">
-        <label for="goal">Goal</label>
+        <label for="goal">Edit Daily Goal</label>
         <input name="goal"
               class="form-control" 
               ng-model="$root.currentUser.goal"
@@ -24,12 +22,13 @@
   </div>
 </div>
 
+<!-- Entry List -->
 <div class="main list-group" ng-repeat="day in main.days | orderBy:'date':true">
 
   <div ng-show="day.entry">
 
     <a class="list-group-item" ng-hide="day.entry.locked" ng-href="#/entries/{{ day.entry.id }}">
-      <h3><small>{{ day.date | date:"MMM d, y" }}</small></h3>
+      <h3>{{ day.date | date:"MMM d, y" }}</h3>
       <h3>{{day.entry.progress}}%</h3>
       <div class="progress">      
         <div class="progress-bar 
@@ -43,7 +42,7 @@
     </a>
 
     <div class="list-group-item" ng-show="day.entry.locked">
-      <h3><span class="glyphicon glyphicon-lock" aria-hidden="true"></span> <small>{{ day.date | date:"MMM d, y" }}</small></h3>
+      <h3><span class="glyphicon glyphicon-lock" aria-hidden="true"></span> {{ day.date | date:"MMM d, y" }}</h3>
       <h3>{{day.entry.progress}}%</h3>
       <div class="progress">
         <div class="progress-bar 
@@ -59,7 +58,7 @@
 
   <div ng-hide="day.entry">
     <div class="list-group-item">
-      <h3><small>{{ day.date | date:"MMM d, y" }}</small></h3>
+      <h3>{{ day.date | date:"MMM d, y" }}</h3>
       <h3>0%</h3>
       <div class="progress">      
         <div class="progress-bar"  
