--- a/wrn-angular/app/styles/main.less
+++ b/wrn-angular/app/styles/main.less
@@ -100,7 +100,8 @@ body {
 .main.list-group {
 
   .progress{
-    height: 5px; 
+    height: 7px; 
+    border-radius: 0px;
     clear: both; 
   }
 
@@ -148,6 +149,7 @@ body {
   -webkit-transition: visibility opacity 0.2s;
   font-size: @font-size-h2;
   font-family: @font-family-serif;
+  text-align: center;
 }
 
 .well {
