--- a/wrn-angular/app/styles/main.less
+++ b/wrn-angular/app/styles/main.less
@@ -60,7 +60,7 @@
 
 @navbar-default-bg: @main-color;
 @navbar-default-link-color: @gray-lighter;
-
+@link-hover-color: @main-color;
 @nav-link-hover-bg: transparent;
 
 /* padding for fixed nav bar*/
@@ -96,7 +96,7 @@ body {
   font-size: @font-size-h1;
 }
 
-/* progress bar & list -group */
+/* entry list and stats table */
 .main.list-group {
 
   .progress{
@@ -118,16 +118,40 @@ body {
   clear:both; 
 
   h3{
-    display: inline-block;    
+    display: inline-block; 
+    span {
+      color: @brand-warning;
+    }   
   }
-  /* Date */
+
+  /* Date and label */
   h3:nth-child(1){
     float: left;
   }
-  /* Percentage */
+
+  /* Percentage and word count */
   p, h3:nth-child(2){
     float: right;
   }
+
+  .preview {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: fade(@gray-darker, 80%);
+    color: white;
+    visibility: hidden;
+    opacity: 0;
+    padding: 0.75em 6.5em ;
+    -webkit-transition: visibility opacity 0.2s;
+    font-size: @font-size-h2;
+    font-family: @font-family-serif;
+    text-align: center;
+    overflow: hidden;
+  }
+
 }
 
 .list-group-item:hover .preview {
@@ -135,25 +159,15 @@ body {
   opacity: 1;
 }
 
-.preview {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: fade(@gray-darker, 80%);
-  color: white;
-  visibility: hidden;
-  opacity: 0;
-  padding: 0.75em 6.5em ;
-  -webkit-transition: visibility opacity 0.2s;
-  font-size: @font-size-h2;
-  font-family: @font-family-serif;
-  text-align: center;
-}
 
+/* for editing daily goal */
 .well {
   background-color: transparent;
   border: none;
   box-shadow: none;
+}
+
+/* modal */
+.modal-content {
+  text-align: center;
 }
