--- a/wrn-angular/app/views/entry.html
+++ b/wrn-angular/app/views/entry.html
@@ -13,12 +13,9 @@
 <div class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="successModalLabel">Awesome!</h4>
-      </div>
       <div class="modal-body">
-        <p>You've reached today's goal!</p>
+        <h1>Congrats!</h1>
+        <h1><small>You've reached today's goal.</small></h1>
       </div>
     </div>
   </div>
