--- a/wrn-angular/app/views/main.html
+++ b/wrn-angular/app/views/main.html
@@ -5,8 +5,10 @@
   <div class="page-header"><h1>{{ $root.currentUser.name }}'s Entries</h1>
   
   <h3>Daily goal: {{ $root.currentUser.goal }} words
-    <span class="glyphicon glyphicon-edit" aria-hidden="true" aria-pressed="false" autocomplete="off" aria-label="Edit"
-    data-toggle="collapse" data-target="#goalInput" aria-expanded="false" aria-controls="goalInput"></span>
+    <a href=""><span 
+    class="glyphicon glyphicon-edit" aria-hidden="true" 
+    aria-pressed="false" autocomplete="off" aria-label="Edit"
+    data-toggle="collapse" data-target="#goalInput" aria-expanded="false" aria-controls="goalInput"></span></a>
   </h3>
 
   <div class="collapse" id="goalInput">
