--- a/wrn-angular/app/styles/main.css
+++ b/wrn-angular/app/styles/main.css
@@ -1328,11 +1328,11 @@ mark,
   color: #777777;
 }
 .text-primary {
-  color: #337ab7;
+  color: #00cccc;
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #286090;
+  color: #009999;
 }
 .text-success {
   color: #3c763d;
@@ -1364,11 +1364,11 @@ a.text-danger:focus {
 }
 .bg-primary {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #00cccc;
 }
 a.bg-primary:hover,
 a.bg-primary:focus {
-  background-color: #286090;
+  background-color: #009999;
 }
 .bg-success {
   background-color: #dff0d8;
@@ -3110,26 +3110,26 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #00cccc;
+  border-color: #00b3b3;
 }
 .btn-primary:focus,
 .btn-primary.focus {
   color: #ffffff;
-  background-color: #286090;
-  border-color: #122b40;
+  background-color: #009999;
+  border-color: #003333;
 }
 .btn-primary:hover {
   color: #ffffff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #009999;
+  border-color: #007575;
 }
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #009999;
+  border-color: #007575;
 }
 .btn-primary:active:hover,
 .btn-primary.active:hover,
@@ -3141,8 +3141,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active.focus,
 .open > .dropdown-toggle.btn-primary.focus {
   color: #ffffff;
-  background-color: #204d74;
-  border-color: #122b40;
+  background-color: #007575;
+  border-color: #003333;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -3167,11 +3167,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #00cccc;
+  border-color: #00b3b3;
 }
 .btn-primary .badge {
-  color: #337ab7;
+  color: #00cccc;
   background-color: #ffffff;
 }
 .btn-success {
@@ -3606,7 +3606,7 @@ tbody.collapse.in {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #337ab7;
+  background-color: #00cccc;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -4128,7 +4128,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #337ab7;
+  background-color: #00cccc;
 }
 .nav-stacked > li {
   float: none;
@@ -4785,8 +4785,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #00cccc;
+  border-color: #00cccc;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -4903,11 +4903,11 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #337ab7;
+  background-color: #00cccc;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #286090;
+  background-color: #009999;
 }
 .label-success {
   background-color: #009e60;
@@ -5158,7 +5158,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #ffffff;
   text-align: center;
-  background-color: #337ab7;
+  background-color: #00cccc;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5321,8 +5321,8 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #00cccc;
+  border-color: #00cccc;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5338,7 +5338,7 @@ button.list-group-item {
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
-  color: #c7ddef;
+  color: #99ffff;
 }
 .list-group-item-success {
   color: #3c763d;
@@ -5718,22 +5718,22 @@ button.list-group-item-danger.active:focus {
   border-bottom-color: #dddddd;
 }
 .panel-primary {
-  border-color: #337ab7;
+  border-color: #00cccc;
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #00cccc;
+  border-color: #00cccc;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #337ab7;
+  border-top-color: #00cccc;
 }
 .panel-primary > .panel-heading .badge {
-  color: #337ab7;
+  color: #00cccc;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #337ab7;
+  border-bottom-color: #00cccc;
 }
 .panel-success {
   border-color: #d6e9c6;
@@ -6808,11 +6808,11 @@ button.close {
 /* hot pink */
 /* padding for fixed nav bar*/
 body {
-  padding: 70px;
+  padding: 70px 190px;
 }
 /* styles for the ql-editor */
 .ql-editor {
-  padding: 0 3em;
+  /*padding: 0 3em;*/
   font-size: 24px;
   font-family: Garamond, Georgia, "Times New Roman", Times, serif;
 }
@@ -6832,9 +6832,11 @@ body {
 */
   font-family: Monofett;
   color: #222222 !important;
-  font-size: 36px;
+  font-size: 50px;
+  line-height: 33px;
+  padding: 20px 35px;
 }
-/* progress bar & list -group */
+/* entry list and stats table */
 .main.list-group .progress {
   height: 7px;
   border-radius: 0px;
@@ -6847,8 +6849,8 @@ body {
 .list-group .list-group-item {
   overflow: auto;
   clear: both;
-  /* Date */
-  /* Percentage */
+  /* Date and label */
+  /* Percentage and word count */
 }
 .list-group .list-group-item h3 {
   display: inline-block;
