--- a/wrn-angular/app/styles/main.less
+++ b/wrn-angular/app/styles/main.less
@@ -79,7 +79,7 @@ body {
 /* hide nav bar */
 .fs-navbar {
   opacity:0.0;
-  transition:1s;
+  transition:2s;
 }
 
 .fs-navbar:hover{
@@ -88,10 +88,6 @@ body {
 
 /* style the navbar brand */
 .navbar-brand {
-/*  font-family: Bevan;
-  font-size: 22px;
-  text-shadow: 3px 2px 0 @main-color,5px 4px 0 @gray;
-*/
   font-family: Monofett; 
   color: @gray-darker !important; 
   font-size: 42px;
@@ -172,6 +168,18 @@ body {
 }
 
 /* modal */
+/*@keyframes star-animation {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+.modal-body span {
+  color: @brand-success;
+  animation: star-animation 2s infinite  alternate backwards;
+}*/
 .modal-content {
   text-align: center;
 }
