--- a/wrn-angular/app/views/entry.html
+++ b/wrn-angular/app/views/entry.html
@@ -14,8 +14,8 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
-        <h1>Congrats!</h1>
-        <h1><small>You've reached today's goal.</small></h1>
+        <h1><span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> YAY! <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span></h1>
+        <h1><small>You've reached today's goal!</small></h1>
       </div>
     </div>
   </div>
